--- a/requirements.txt
+++ b/requirements.txt
@@ -43,5 +43,6 @@ typing-inspection==0.4.0
 typing_extensions==4.13.0
 urllib3==1.26.20
 uvicorn==0.29.0
+uvloop==0.21.0
 watchfiles==1.0.4
 websockets==15.0.1
