--- a/requirements.txt
+++ b/requirements.txt
@@ -17,15 +17,20 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 jmespath==1.0.1
+mangum==0.19.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+packaging==24.2
+pluggy==1.5.0
 pydantic==2.11.1
 pydantic-settings==2.8.1
 pydantic_core==2.33.0
 Pygments==2.19.1
+pytest==8.3.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
@@ -38,13 +43,11 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.37.2
+tomli==2.2.1
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.0
 urllib3==1.26.20
 uvicorn==0.29.0
-uvloop==0.21.0
 watchfiles==1.0.4
 websockets==15.0.1
-pytest>=8.0.0,<9.0.0
-pytest-asyncio>=0.23.0,<0.24.0
